--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Pol",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "uuid-tool": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
